lintian (2.5.2) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - package-has-long-file-name
      - source-package-component-has-long-file-name
      - upstart-job-in-etc-init.d-not-registered-via-update-rc.d

  * checks/binaries:
    + [NT] Added lib/${MULTIARCH_DIR} to the list of paths to
      check for public shared libraries.  Thanks to Sven Joachim
      for the report and the patch.  (Closes: #630698)
    + [NT] Recognise .gox files as object files that cannot be
      stripped.  Thanks to Matthias Klose for the report.
      (Closes: #624521)
  * checks/circular-deps.desc:
    + [NT] Fixed typo; thanks to Nicolás Alvarez for the report
      and patch.  (Closes: #630925)
  * checks/copyright-file:
    + [NT] Stricten one of the regexes for catching left over
      helper templates.  This should prevent false-positives for
      some license texts.  Thanks to Charles Plessy for the
      report.  (Closes: #631674)
  * checks/deb-format{,.desc}:
    + [NT] Allow data.tar.xz as the second member.  Thanks to
      Ansgar Burchardt for the report and patch.
      (Closes: #632556)
  * checks/debhelper:
    + [NT] Do not trigger deprecation warning for dh_python if it
      is followed by a "$".  This prevents false-positives when
      a Makefile variable is used to choose between dh_python2
      and dh_python3.  Thanks to Leonid Borisenko for the report.
      (Closes: #631662)
  * checks/filename-length{,.desc}:
    + [NT] New file that checks the length of the package file
      names.  (Closes: #631656)
  * checks/files:
    + [NT] Check for embedded copies of the underscore javascript
      library.  Thanks to Jakub Wilk for report and the patch.
      (Closes: #631513)
    + [NT] Removed a leading slash from the filename part of the
      extra for python-debug-in-wrong-location.  Thanks to
      Jakub Wilk for the report and the patch.  (Closes: #631530)
  * checks/init.d{,.desc}: