@@ -1,0 +1,7 @@
+# Manual maintained list of Makefiles that can be included from
+# d/rules, but is also known to be deprecated.
+#
+# Please keep it sorted by file name.
+
+/usr/share/cdbs/1/rules/dpatch.mk
+/usr/share/cdbs/1/rules/simple-patchsys.mk
